[workspace]
members=[
    "rl_utils",
    "rl_fov",
    "rl_mapgen",
    "rl_ecs",
    "rl_ecs-codegen",
    "rl_ecs-codegen/rl_ecs-tests",
]

[profile]
[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = 3
debug = true

[profile.bench]
codegen-units = 1
incremental = false
lto = true
opt-level = 3
debug = true

[profile.test]
codegen-units = 1
incremental = false
opt-level = 3
debug = true
