[package]
name = "rl_ecs-codegen"
version = "0.1.0"
authors = ["Cor <prive@corpeters.nl>"]
edition = "2018"

[lib]
proc-macro = true

[features]
default = ["serde"]
serde = []

[dependencies]
quote = "1.0"
proc-macro-error = "1.0.4"
proc-macro2 = { version = "1.0", features = ["nightly"] }
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
backtrack = "0.3.0"
indexmap = "1.7.0"
#aquamarine = "0.1.10"