[package]
authors = ["Luctius Invictus <luctius@luctius@gmail.com>"]
edition = "2018"
name = "rl_ecs"
version = "0.1.0"
license = "MIT OR Apache-2.0"

#[[bin]]
#name = "matcher_run"
#path = "src/test_matcher_run.rs"

[[bench]]
harness = false
name = "simple"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
slotmap = { version = "1.0.2", features = ["serde"] }

[dev-dependencies]
criterion = "^0.2"
simple_logger = "0.4.0"
