[package]
name = "rl_ecs-tests"
version = "0.1.0"
authors = ["Luctius <luctius@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rl_ecs = { version = "*", path = "../../rl_ecs"}
serde = { version = "1.0", features = ["derive"] }
